# game

./: build.sh  engine.slnx  meson.build
engine/: engine.vcxproj  engine.vcxproj.filters
engine/headers/: game_context.h  sdl_context.h
engine/src/: component.cpp  game_context.cpp
engine/x64/Debug/: engine.exe.recipe  engine.ilk  vc145.idb
engine/x64/Debug/engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
headers/: component.h  entity.h  game_context.h  vec2.h
src/: component.cpp  entity.cpp  game_context.cpp  main.cpp  sdl_context.cpp
